# geoclue

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  geoclue.pc.in  libtool  meson.build  meson_options.txt
applet/: GNOME_geoclue.server  Makefile.am  geoclue_applet.c
backend/common/: Makefile.am  geoclue_iposition.c  geoclue_iposition.h  geoclue_iposprovider.c  geoclue_iposprovider.h  geoclue_position_error.c  geoclue_web_service.c  geoclue_web_service.h
backend/geoclue_master/: Makefile.am  geoclue_map_master.c  geoclue_map_master.h  geoclue_master.c  geoclue_master.h  geoclue_position_master.c  geoclue_position_master.h
backend/geocode_yahoo/: Makefile.am  geoclue_geocode_server_yahoo.c  geoclue_geocode_server_yahoo.h  geocode_yahoo.desc  org.foinse_project.geoclue.geocode.yahoo.service.in  org.freedesktop.geoclue.geocode.yahoo.service.in
backend/map_yahoo/: Makefile.am  geoclue_map_server_yahoo.c  geoclue_map_server_yahoo.h  map_yahoo.desc  org.foinse_project.geoclue.map.yahoo.service.in  org.freedesktop.geoclue.map.yahoo.service.in
backend/position_gpsd/: Makefile.am  geoclue_position_server_gpsd.c  geoclue_position_server_gpsd.h  org.foinse_project.geoclue.position.gpsd.service.in  org.freedesktop.geoclue.position.gpsd.service.in  position_gpsd.desc
backend/position_gypsy/: Makefile.am  geoclue_position_server_gypsy.c  geoclue_position_server_gypsy.h  org.freedesktop.geoclue.position.gypsy.service.in  position_gypsy.desc
backend/position_manual/: Makefile.am  geoclue_position_server_manual.c  geoclue_position_server_manual.h  geoclue_position_server_yahoo.c  geoclue_position_server_yahoo.h  org.foinse_project.geoclue.position.manual.service.in  org.freedesktop.geoclue.position.manual.service.in  position_manual.desc
data/: Makefile.am  Makefile.in  geoclue.conf.in  geoclue.schemas  meson.build  org.freedesktop.GeoClue2.Agent.conf  org.freedesktop.GeoClue2.conf  org.freedesktop.GeoClue2.conf.in  org.freedesktop.GeoClue2.rules.in  org.freedesktop.GeoClue2.service.in
debian/: changelog  (+31 more)
demo/: Makefile.am  Makefile.in  agent.c  gclue-keeper.c  gclue-keeper.service  gclue-service-agent.c  gclue-service-agent.h  geoclue-agent-interface.c  geoclue-agent-interface.h  geoclue-demo-agent.desktop.in  geoclue-demo-agent.desktop.in.in  geoclue-where-am-i.desktop.in  geoclue-where-am-i.desktop.in.in  meson.build  where-am-i.c
docs/: Makefile.am  Makefile.in  README  docs-org.freedesktop.GeoClue2.Agent.xml  docs-org.freedesktop.GeoClue2.Client.xml  docs-org.freedesktop.GeoClue2.Location.xml  docs-org.freedesktop.GeoClue2.Manager.xml  geoclue-docs.xml  geoclue-sections.txt  geoclue.dia  geoclue.types  meson.build
docs/html/: gdbus-org.freedesktop.GeoClue2.Agent.html  gdbus-org.freedesktop.GeoClue2.Client.html  gdbus-org.freedesktop.GeoClue2.Location.html  gdbus-org.freedesktop.GeoClue2.Manager.html  geoclue-gclue-enums.html  geoclue.devhelp2  index.html  index.sgml  ix01.html  license.html  ref-agent-dbus.html  ref-dbus.html
docs/lib/: Makefile.am  Makefile.in  libgeoclue-sections.txt  libgeoclue.types
docs/reference/: Makefile.am  Makefile.in  gc-iface-address-ref.xml  gc-iface-geoclue-ref.xml  gc-iface-geocode-ref.xml  gc-iface-master-client-ref.xml  gc-iface-master-ref.xml  gc-iface-position-ref.xml  gc-iface-reverse-geocode-ref.xml  gc-iface-velocity-ref.xml  geoclue-docs.sgml  geoclue-sections.txt  geoclue.types  implementing-providers.xml  using-geoclue.xml
docs/tmpl/: gclue-enum-types.sgml  gclue-enums.sgml
docs/tools/: Makefile.in
example/: Makefile.am  Makefile.in  address-example.c  common-example.c  example.c  geoclue_find_example.c  geoclue_geocode_example.c  geoclue_map_example.c  geoclue_map_example_moving.c  geoclue_map_layout_example.c  geoclue_position_example.c  geocode-example.c  master-example.c  master-pos-example.c  position-async-example.c  position-example.c  revgeocode-example.c
geoclue/: Makefile.am  Makefile.in  find.c  find.h  find_glue.xml  find_signal_marshal.list  gc-backend.c  gc-backend.h  gc-iface-address.c  gc-iface-address.h  gc-iface-geoclue.c  gc-iface-geoclue.h  gc-iface-geocode.c  gc-iface-geocode.h  gc-iface-position.c  gc-iface-position.h  gc-iface-reverse-geocode.c  gc-iface-reverse-geocode.h  gc-iface-velocity.c  gc-iface-velocity.h  gc-provider.c  gc-provider.h  gc-web-provider.c  gc-web-provider.h  gc-web-service.c  gc-web-service.h  geoclue-accuracy.c  geoclue-accuracy.h  geoclue-address-details.c  geoclue-address-details.h  geoclue-address.c  geoclue-address.h  geoclue-common.c  geoclue-common.h  geoclue-enum-types.c  geoclue-enum-types.h  geoclue-error.c  geoclue-error.h  geoclue-geocode.c  geoclue-geocode.h  (+38 more)
interfaces/: Makefile.am  Makefile.in  gc-iface-address.xml  gc-iface-geoclue-full.xml  gc-iface-geoclue.xml  gc-iface-geocode-full.xml  gc-iface-geocode.xml  gc-iface-master-client-full.xml  gc-iface-master-full.xml  gc-iface-position-full.xml  gc-iface-position.xml  gc-iface-reverse-geocode-full.xml  gc-iface-reverse-geocode.xml
public-api/: Makefile.in  gclue-enum-types.c  gclue-enum-types.h  gclue-enums.h  meson.build
src/: Makefile.am  Makefile.in  client.c  client.h  compass-interface.c  compass-interface.h  connectivity-conic.c  connectivity-conic.h  connectivity-networkmanager.c  connectivity-networkmanager.h  connectivity.c  connectivity.h  gclue-3g.c  gclue-3g.h  gclue-cdma.c  gclue-client-info.c  gclue-client-info.h  gclue-client-interface.c  gclue-client-interface.h  gclue-compass.c  gclue-config.c  gclue-config.h  gclue-hybris-binder-aidl-types.h  gclue-hybris-binder-aidl.c  gclue-hybris-binder-aidl.h  gclue-hybris-binder-types.h  gclue-hybris-binder.c  gclue-hybris-source.c  gclue-hybris-source.h  gclue-hybris-types.h  gclue-hybris.c  gclue-hybris.h  gclue-ipclient.c  gclue-ipclient.h  gclue-location-interface.c  gclue-location-interface.h  gclue-location-source.c  gclue-location-source.h  gclue-location.c  gclue-location.h  (+50 more)
yahoobackend/: Makefile.am  geoclueserver-yahoo.c
(+246 files in other folders)
